fix random scrollbar that shouldn't exist
like wtf facebook

--- a/fb-messenger-dark.css
+++ b/fb-messenger-dark.css
@@ -7,6 +7,7 @@
 body._5s5h {
 	background-color: #141813;  /* this doesn't do shit */
 	color: white;
+	overflow-y: auto; /* wtf are you doing facebook */
 }
 /* ..., ..., stickers */
 ._36ic, ._5742, ._293j, ._5r8a._5r8b {
